k8s/networkpolicy-default-deny-all.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: bookmyevent
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
